Added overloaded methods with verbose boolean to filter out prints